[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Level1/Time1.gd" type="Script" id=1]
[ext_resource path="res://rock_1.fbx" type="PackedScene" id=2]
[ext_resource path="res://Items/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level1/TimeBasedThing.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.4, 0, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10.1829, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.47061, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.93051, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "move"
length = 20.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10.1829, -0.25, 0, 0.25, 0, -9.93634, -0.25, 0, 0.25, 0, -10.2114, -0.25, 0, 0.25, 0, 9.55145, -0.25, 0, 0.25, 0, 10.1957, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 8.9, 10, 19.2, 20 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.47061, -0.25, 0, 0.25, 0, 4.47061, -0.25, 0, 0.25, 0, 4.47061, -0.25, 0, 0.25, 0, 4.47061, -0.25, 0, 0.25, 0, 4.47061, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 8.9, 10, 19.2, 20 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.93051, -0.25, 0, 0.25, 0, -1.93051, -0.25, 0, 0.25, 0, -1.93051, -0.25, 0, 0.25, 0, -1.93051, -0.25, 0, 0.25, 0, -1.93051, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 8.9, 10, 19.2, 20 )
}

[sub_resource type="CubeMesh" id=6]
size = Vector3( 2, 0.2, 2 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 0.1, 1 )

[node name="Level1" type="Spatial"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.96625, 0.257605, 0, -0.257605, 0.96625, 0, 2.01072, 0 )
light_color = Color( 0.898039, 0.960784, 0.980392, 1 )
shadow_enabled = true
shadow_bias = -0.468

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
acceleration = 0.6
deceleration = 0.7

[node name="Ground" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
use_collision = true
collision_layer = 8
width = 50.0
height = 0.2
depth = 50.0

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.52845, 0, 2.95719 )
use_collision = true
collision_layer = 8

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.729, 1.30447, 2.32371 )
use_collision = true
collision_layer = 8

[node name="CSGBox4" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4003, 1.92001, 6.16206 )
use_collision = true
collision_layer = 8
depth = 7.17827

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.9087, 3.83712, 1.26054 )
use_collision = true
collision_layer = 8
height = 0.50101

[node name="CSGBox5" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.9087, 2.29105, -1.56773 )
use_collision = true
collision_layer = 8
height = 5.19515

[node name="CSGBox6" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.431, 4.31334, -2.56304 )
use_collision = true
collision_layer = 8

[node name="Coin1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, 0 )

[node name="Spatial2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.5, 0 )

[node name="Coin" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.84148, 1.32856, 2.65457 )

[node name="TimeBasedThing" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Time1" type="CSGSphere" parent="TimeBasedThing"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.605904, 3.57357 )
use_collision = true
collision_layer = 4
collision_mask = 0
radius = 0.25
material = SubResource( 1 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="TimeBasedThing"]
wait_time = 5.0
one_shot = true

[node name="Position3D" type="Position3D" parent="TimeBasedThing"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.41726, 0.39288, 8.83081 )

[node name="CoinPosition" type="Position3D" parent="TimeBasedThing"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.0557, 3.22073, 4.35451 )

[node name="rock_1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96044, 0.1, -2.04929 )

[node name="rock_2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.028, 0.1, -10.3082 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.576159, -5.11906 )
collision_layer = 40

[node name="CSGBox" type="CSGBox" parent="StaticBody"]
use_collision = true
collision_layer = 40
collision_mask = 0
material = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="Moving" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1829, 4.47061, -1.93051 )
collision_layer = 8
mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving"]
autoplay = "move"
playback_process_mode = 0
anims/RESET = SubResource( 4 )
anims/move = SubResource( 5 )

[node name="CSGMesh" type="CSGMesh" parent="Moving"]
mesh = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Moving"]
shape = SubResource( 7 )

[connection signal="timeout" from="TimeBasedThing/Timer" to="TimeBasedThing" method="_on_Timer_timeout"]
